finalizing intro on github

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html> 
 <html>
   <head>
-    <!-- https://googledrive.com/host/0B-659FdpCliwSlFIUEtkXzNYMUk/ -->
+    <!-- https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/ -->
+    <!-- https://github.com/vicmortelmans/geloofsapps/tree/gh-pages -->
     <title>Geloofsapps</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="js/jquery.mobile-1.2.0.min.css" />
@@ -138,17 +139,17 @@
             </a>
           </li>
           <li data-icon="plus">
-            <a href="books/kyriale.pdf" rel="external">
+            <a href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/books/kyriale.pdf" rel="external">
               <img src="img/kyriale.png"/>Kyriale<br/><small>bron:www.una.voce.de</small>
             </a>
           </li>
           <li data-icon="plus">
-            <a href="books/de-navolging-van-christus.epub" rel="external">
+            <a href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/books/de-navolging-van-christus.epub" rel="external">
               <img src="img/navolging-e-boek.jpg"/>De navolging van Christus<br/><small>Thomas a Kempis</small>
             </a>
           </li>
           <li data-icon="plus">
-            <a href="books/Innerlijk-Leven-WillemGrossouw.epub" rel="external">
+            <a href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/books/Innerlijk-Leven-WillemGrossouw.epub" rel="external">
               <img src="img/innerlijk-leven.png"/>Innerlijk Leven<br/><small>Willem Grossouw</small>
             </a>
           </li>
@@ -215,22 +216,22 @@
             <img src="img/bijbelmobiel.png"><h2>Nieuwe Testament<br/><small>bron:www.luisterbijbel.nl</small></h2>
             <ul data-role="listview">
               <li data-icon="plus">
-                <a href="audiobooks/Het%20evangelie%20volgens%20Lucas-downloadbijbel.m4b" rel="external">
+                <a href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/audiobooks/Het%20evangelie%20volgens%20Lucas-downloadbijbel.m4b" rel="external">
                   <img src="img/lucas-nl.png"/>Evangelie volgens Lucas<br/><small>39 MB - bron:www.luisterbijbel.nl</small>
                 </a>
               </li>
               <li data-icon="plus">
-                <a href="audiobooks/Het%20evangelie%20volgens%20Mattheus-downloadbijbel.m4b" rel="external">
+                <a href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/audiobooks/Het%20evangelie%20volgens%20Mattheus-downloadbijbel.m4b" rel="external">
                   <img src="img/mattheus-nl.png"/>Evangelie volgens Mattheus<br/><small>20 MB - bron:www.luisterbijbel.nl</small>
                 </a>
               </li>
               <li data-icon="plus">
-                <a href="audiobooks/Het%20evangelie%20volgens%20Marcus-downloadbijbel.m4b" rel="external">
+                <a href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/audiobooks/Het%20evangelie%20volgens%20Marcus-downloadbijbel.m4b" rel="external">
                   <img src="img/marcus-nl.png"/>Evangelie volgens Marcus<br/><small>13 MB - bron:www.luisterbijbel.nl</small>
                 </a>
               </li>
               <li data-icon="plus">
-                <a href="audiobooks/Het%20evangelie%20volgens%20Johannes-downloadbijbel.m4b" rel="external">
+                <a href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/audiobooks/Het%20evangelie%20volgens%20Johannes-downloadbijbel.m4b" rel="external">
                   <img src="img/johannes-nl.png"/>Evangelie volgens Johannes<br/><small>14 MB - bron:www.luisterbijbel.nl</small>
                 </a>
               </li>
@@ -240,29 +241,29 @@
             <img src="img/radiomaria.jpg"><h2>Nieuwe Testament<br/><small>bron:www.radiomaria.be</small></h2>
             <ul data-role="listview">
               <li data-icon="plus">
-                <a href="audiobooks/Het%20evangelie%20volgens%20Lucas-radiomaria.m4b" rel="external">
+                <a href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/audiobooks/Het%20evangelie%20volgens%20Lucas-radiomaria.m4b" rel="external">
                   <img src="img/lucas-vl.png"/>Evangelie volgens Lucas<br/><small>23 MB - bron:www.radiomaria.be</small>
                 </a>
               </li>
               <li data-icon="plus">
-                <a href="audiobooks/Het%20evangelie%20volgens%20Mattheus%20-radiomaria.m4b" rel="external">
+                <a href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/audiobooks/Het%20evangelie%20volgens%20Mattheus%20-radiomaria.m4b" rel="external">
                   <img src="img/mattheus-vl.png"/>Evangelie volgens Mattheus<br/><small>5 MB - bron:www.radiomaria.be</small>
                 </a>
               </li>
               <li data-icon="plus">
-                <a href="audiobooks/Het%20evangelie%20volgens%20Marcus%20-radiomaria.m4b" rel="external">
+                <a href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/audiobooks/Het%20evangelie%20volgens%20Marcus%20-radiomaria.m4b" rel="external">
                   <img src="img/marcus-vl.png"/>Evangelie volgens Marcus<br/><small>13 MB - bron:www.radiomaria.be</small>
                 </a>
               </li>
               <li data-icon="plus">
-                <a href="audiobooks/Het%20evangelie%20volgens%20Johannes%20-radiomaria.m4b" rel="external">
+                <a href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/audiobooks/Het%20evangelie%20volgens%20Johannes%20-radiomaria.m4b" rel="external">
                   <img src="img/johannes-vl.png"/>Evangelie volgens Johannes<br/><small>19 MB - bron:www.radiomaria.be</small>
                 </a>
               </li>
             </ul>
           </li>
           <li data-icon="plus">
-            <a href="audiobooks/kyriale.m4b" rel="external">
+            <a href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/audiobooks/kyriale.m4b" rel="external">
               <img src="img/kyriale.png"/>Kyriale<br/><small>46 MB - bron:www.ccwatershed.org</small>
             </a>
           </li>
@@ -1210,4 +1211,4 @@
 
   </body>
 </html>
-                																				
+                																					
