renaming to credomobiel

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/ -->
     <!-- https://github.com/vicmortelmans/geloofsapps/tree/gh-pages -->
     <!-- http://vicmortelmans.github.com/geloofsapps/ -->
-    <title>Geloofsapps</title>
+    <title>CREDOMOBIEL</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="js/jquery.mobile-1.2.0.min.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
@@ -38,7 +38,7 @@
       <!-- /header -->
 
       <div data-role="content">
-        <p>Mobiele toepassingen, hulpmiddelen en informatiebronnen voor de katholieke gelovige.</p>
+        <!--div>Mobiele toepassingen, hulpmiddelen en informatiebronnen voor de katholieke gelovige.</div-->
         <ul data-role="listview" data-inset="false">
             <li><a href="#mobiele-websites"><img src="img/mobiele-websites.png"/>Mobiele websites</a></li>
             <li><a href="#android-apps"><img src="img/android-apps.png"/>Android apps</a></li>
@@ -1213,4 +1213,4 @@
 
   </body>
 </html>
-                																						
+                																							
