added intro text as <p>

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <!-- /header -->
 
       <div data-role="content">
-        <!--div>Mobiele toepassingen, hulpmiddelen en informatiebronnen voor de katholieke gelovige.</div-->
+        <h3>Mobiele toepassingen, hulpmiddelen en informatiebronnen voor de katholieke gelovige.</h3>
         <ul data-role="listview" data-inset="false">
             <li><a href="#mobiele-websites"><img src="img/mobiele-websites.png"/>Mobiele websites</a></li>
             <li><a href="#android-apps"><img src="img/android-apps.png"/>Android apps</a></li>
