added intro text as <p>

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/ -->
     <!-- https://github.com/vicmortelmans/geloofsapps/tree/gh-pages -->
     <!-- http://vicmortelmans.github.com/geloofsapps/ -->
-    <title>CREDOMOBIEL</title>
+    <title>Credomobiel</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="js/jquery.mobile-1.2.0.min.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
@@ -17,6 +17,10 @@
             background-repeat:repeat-x;
             background-position:center bottom; 
             background-color: white;
+        }
+        .intro
+        {
+            color: gray;
         }
     </style>
     <script src="js/jquery-1.8.2.min.js"></script>
@@ -33,12 +37,12 @@
     <div data-role="page">
 
       <div data-role="header">
-        <h1>Geloofsapps</h1>
+        <h1>CREDOMOBIEL</h1>
       </div>
       <!-- /header -->
 
       <div data-role="content">
-        <h3>Mobiele toepassingen, hulpmiddelen en informatiebronnen voor de katholieke gelovige.</h3>
+        <h4 class="intro">Mobiele toepassingen, hulpmiddelen en informatiebronnen voor de katholieke gelovige.</h4>
         <ul data-role="listview" data-inset="false">
             <li><a href="#mobiele-websites"><img src="img/mobiele-websites.png"/>Mobiele websites</a></li>
             <li><a href="#android-apps"><img src="img/android-apps.png"/>Android apps</a></li>
