added intro text as <li>

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
       <!-- /header -->
 
       <div data-role="content">
-        <h4 class="intro">Mobiele toepassingen, hulpmiddelen en informatiebronnen voor de katholieke gelovige.</h4>
         <ul data-role="listview" data-inset="false">
+            <li data-theme="b">Mobiele toepassingen, hulpmiddelen en informatiebronnen voor de katholieke gelovige.</li>
             <li><a href="#mobiele-websites"><img src="img/mobiele-websites.png"/>Mobiele websites</a></li>
             <li><a href="#android-apps"><img src="img/android-apps.png"/>Android apps</a></li>
             <li><a href="#e-boeken"><img src="img/e-boeken.png"/>E-boeken</a></li>
