added link to social buttons

--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
                     </li>
                 </ul>
                 <div data-role="controlgroup" data-type="horizontal">
-                    <a target="_blank" href="http://www.facebook.com/sharer/sharer.php?u=#url"
+                    <a target="_blank" href="http://www.facebook.com/sharer/sharer.php?u=credomobiel.net"
                         data-role="button" data-icon="star" data-theme="e" data-inline="true"
                         >Like</a>
-                    <a target="_blank" href="http://twitter.com/home?status=#url" data-role="button"
+                    <a target="_blank" href="http://twitter.com/home?status=credomobiel.net" data-role="button"
                         data-icon="star" data-theme="e" data-inline="true">Tweet</a>
                     <a target="_blank"
-                        href="https://plusone.google.com/_/+1/confirm?hl=en&amp;url=#URL"
+                        href="https://plusone.google.com/_/+1/confirm?hl=en&amp;url=credomobiel.net"
                         data-role="button" data-icon="star" data-theme="e" data-inline="true"
                         >Google+</a>
                 </div>
