added link to social buttons

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <!-- http://vicmortelmans.github.com/geloofsapps/ -->
         <title>Credomobiel</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="description" content="Mobiele toepassingen, hulpmiddelen en
+            informatiebronnen voor de katholieke gelovige." />
         <link rel="stylesheet" href="js/jquery.mobile-1.2.0.min.css" />
         <link rel="icon" type="image/png" href="favicon.png" />
         <link rel="apple-touch-icon-precomposed" href="favicon114.png" />
@@ -80,7 +82,7 @@
                     <a target="_blank" href="http://twitter.com/home?status=credomobiel.net" data-role="button"
                         data-icon="star" data-theme="e" data-inline="true">Tweet</a>
                     <a target="_blank"
-                        href="https://plusone.google.com/_/+1/confirm?hl=en&amp;url=credomobiel.net"
+                        href="https://plus.google.com/share?url=credomobiel.net"
                         data-role="button" data-icon="star" data-theme="e" data-inline="true"
                         >Google+</a>
                 </div>
