adding google webmaster tools verification code

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content="Mobiele toepassingen, hulpmiddelen en
             informatiebronnen voor de katholieke gelovige." />
+        <meta name="google-site-verification" content="AsngXlOa88G3VdZ1h9QSR-cRhM49YUCOiIecY2j6Hlw" />
         <link rel="stylesheet" href="js/jquery.mobile-1.2.0.min.css" />
         <link rel="icon" type="image/png" href="favicon.png" />
         <link rel="apple-touch-icon-precomposed" href="favicon114.png" />
