updated radio stations files and tips

--- a/index.html
+++ b/index.html
@@ -427,15 +427,15 @@
                         </a>
                     </li>
                     <li data-icon="plus">
-                        <a href="http://stream.radiomaria.be:80/RadioMaria-32.m3u" rel="external">
+                        <a href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/internetradio/radio-maria-vlaanderen.m3u" rel="external">
                             <img src="img/radiomaria.jpg" />Radio Maria Vlaanderen </a>
                     </li>
                     <li data-icon="plus">
-                        <a href="http://87.233.180.73:8000/listen.pls" rel="external">
+                        <a href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/internetradio/radio-maria-nederland.m3u" rel="external">
                             <img src="img/radiomaria.jpg" />Radio Maria Nederland </a>
                     </li>
                     <li data-icon="plus">
-                        <a href="http://www.concertzender.nl/streams/gregoriaans" rel="external">
+                        <a href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/internetradio/concertzender-gregoriaans.m3u" rel="external">
                             <img src="img/concertzender.png" />Concertzender Gregoriaans </a>
                     </li>
                 </ul>
@@ -454,7 +454,17 @@
 
             <div data-role="content">
                 <p>Om een internetradiostation te beluisteren moet je een app installeren die
-                        <i>live</i> verbinding maakt met de radioserver.</p>
+                        <i>live</i> verbinding maakt met de radioserver. De opgelijste koppelingen verwijzen naar M3U-bestanden, die de locatie van zo'n server beschrijven.</p>
+                <h3>Just Playlists</h3>
+                <p><i>Just Playlists</i> is een Android app om internetradiostations te beluisteren</p>
+                <ul data-role="listview" data-inset="true">
+                    <li>
+                        <a
+                            href="https://play.google.com/store/apps/details?id=org.journeyman.android.apps.justplaylists&amp;hl=nl">
+                            <img src="img/just-playlists.jpg" />Installeer <i>Just Playlists</i>
+                        </a>
+                    </li>
+                </ul>
                 <h3>ServeStream</h3>
                 <p><i>ServeStream</i> is een Android app om internetradiostations te beluisteren</p>
                 <ul data-role="listview" data-inset="true">
