adding O-antiphons and calendars

--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
                         <a href="#flitskaarten"><img src="img/flitskaarten.png" />Flitskaarten</a>
                     </li>
                     <li>
+                        <a href="#kalenders"><img src="img/calendars.png" />Kalenders</a>
+                    </li>
+                    <li>
                         <a href="#rss-nieuws"><img src="img/rss-nieuws.png" />RSS-nieuws</a>
                     </li>
                 </ul>
