adding checkpointtv and mail link

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <!-- http://credomobiel.net -->
         <title>Credomobiel</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="description" content="Mobiele toepassingen, hulpmiddelen en
-            informatiebronnen voor de katholieke gelovige." />
+        <meta name="description" content="Mobiele apps, studiemateriaal en
+            informatiebronnen voor de katholieke gelovige met een smartphone of tablet." />
         <meta name="google-site-verification" content="AsngXlOa88G3VdZ1h9QSR-cRhM49YUCOiIecY2j6Hlw" />
         <link rel="stylesheet" href="js/jquery.mobile-1.2.0.min.css" />
         <link rel="icon" type="image/png" href="favicon.png" />
@@ -47,8 +47,8 @@
 
             <div data-role="content">
                 <ul data-role="listview" data-inset="false" style="margin-bottom: 0;">
-                    <li data-role="list-divider">Mobiele toepassingen, hulpmiddelen en
-                        informatiebronnen voor de katholieke gelovige.</li>
+                    <li data-role="list-divider">Mobiele <i>apps</i>, studiemateriaal en
+                        informatiebronnen voor de katholieke gelovige met een <i>smartphone</i> of <i>tablet</i>.</li>
                     <li>
                         <a href="#mobiele-websites"><img src="img/mobiele-websites.png" />Mobiele
                             websites</a>
@@ -80,7 +80,6 @@
                         <a href="#rss-nieuws"><img src="img/rss-nieuws.png" />RSS-nieuws</a>
                     </li>
                 </ul>
-                <div data-role="controlgroup" data-type="horizontal">
                     <a target="_blank" href="http://www.facebook.com/sharer/sharer.php?u=credomobiel.net"
                         data-role="button" data-icon="star" data-theme="e" data-inline="true"
                         >Like</a>
@@ -90,7 +89,10 @@
                         href="https://plus.google.com/share?url=credomobiel.net"
                         data-role="button" data-icon="star" data-theme="e" data-inline="true"
                         >Google+</a>
-                </div>
+                <a target="_blank"
+                    href="mailto:info@credomobiel.net"
+                    data-role="button" data-icon="info" data-theme="e" data-inline="true"
+                    >info@credomobiel.net</a>
             </div>
             <!-- /content -->
 
@@ -1170,8 +1172,12 @@
                             <img src="img/kyriale.png" />Maria-antifonen </a>
                     </li>
                     <li>
+                        <a href="http://www.youtube.com/user/checkpointtvbe">
+                            <img src="img/checkpointtv.jpg" />Checkpoint TV<br/><small>Reportages</small></a>
+                    </li>
+                    <li>
                         <a href="http://www.youtube.com/user/videostarninove">
-                            <img src="img/pastoor-penne.png" />Pastoor Penne </a>
+                            <img src="img/pastoor-penne.png" />Pastoor Penne<br/><small>Catechese</small></a>
                     </li>
                     <li>
                         <a href="http://nl.gloria.tv">
