adding urbi et orbi and bijbeltapes

--- a/index.html
+++ b/index.html
@@ -354,6 +354,13 @@
                             </li>
                         </ul>
                     </li>
+                    <li>
+                        <a
+                            href="http://www.youtube.com/user/uitgeverijchevigny?feature=watch"
+                            rel="external">
+                            <img src="img/bijbeltapes.png" />De Bijbeltapes<br /><small>bron:www.debijbeltapes.nl</small>
+                        </a>
+                    </li>
                     <li data-icon="plus">
                         <a
                             href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/audiobooks/kyriale.m4b"
@@ -511,6 +518,25 @@
                         <a href="#filmpjes-info">
                             <p>Tips voor het bekijken van filmpjes via internet</p>
                         </a>
+                    </li>
+                    <li>
+                        <a href="http://www.youtube.com/user/checkpointtvbe">
+                            <img src="img/checkpointtv.jpg" />Checkpoint TV<br/><small>Reportages</small></a>
+                    </li>
+                    <li>
+                        <a href="http://www.youtube.com/user/videostarninove">
+                            <img src="img/pastoor-penne.png" />Pastoor Penne<br/><small>Catechese</small></a>
+                    </li>
+                    <li>
+                        <h2>Urbi et Orbi</h2>
+                        <img src="img/petrus.jpg" />
+                        <ul data-role="listview">
+                            <li>
+                                <a href="http://www.youtube.com/watch?feature=player_detailpage&v=slfquNtiWzo#t=817s">
+                                    <img src="img/petrus.jpg" />Kerstmis 2012<br/>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li>
                         <h2>Kyriale</h2>
@@ -1170,14 +1196,6 @@
                     <li>
                         <a href="#maria-antifonen">
                             <img src="img/kyriale.png" />Maria-antifonen </a>
-                    </li>
-                    <li>
-                        <a href="http://www.youtube.com/user/checkpointtvbe">
-                            <img src="img/checkpointtv.jpg" />Checkpoint TV<br/><small>Reportages</small></a>
-                    </li>
-                    <li>
-                        <a href="http://www.youtube.com/user/videostarninove">
-                            <img src="img/pastoor-penne.png" />Pastoor Penne<br/><small>Catechese</small></a>
                     </li>
                     <li>
                         <a href="http://nl.gloria.tv">
