separating css, js and splitting up index.html

--- a/index.html
+++ b/index.html
@@ -13,26 +13,9 @@
         <link rel="stylesheet" href="js/jquery.mobile-1.2.0.min.css" />
         <link rel="icon" type="image/png" href="favicon.png" />
         <link rel="apple-touch-icon-precomposed" href="favicon114.png" />
-        <style type="text/css">
-            .base
-            {
-                height:400px;
-                background-image:url('img/city_social.png');
-                background-repeat:repeat-x;
-                background-position:center bottom;
-                background-color:white;
-            }
-            .intro
-            {
-                color:gray;
-            }</style>
+        <link rel="stylesheet" href="js/credomobiel.css" type="text/css">
         <script src="js/jquery-1.8.2.min.js"></script>
-        <script type="text/javascript">
-      $(document).bind("mobileinit", function() {
-        $.mobile.page.prototype.options.addBackBtn = true;
-        $.mobile.page.prototype.options.backBtnText = "terug";
-      });    
-    </script>
+        <script src="js/credomobiel.js"></script>
         <!-- http://stackoverflow.com/questions/6221527/jquery-mobile-latest-03-june-2011-version-no-back-button -->
         <script src="js/jquery.mobile-1.2.0.min.js"></script>
     </head>
