--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <a href="kalenders.html"><img src="img/calendars.png" />Kalenders</a>
                     </li>
                     <li>
-                        <a href="index.html#rss-nieuws"><img src="img/rss-nieuws.png" />RSS-nieuws</a>
+                        <a href="rss-nieuws.html"><img src="img/rss-nieuws.png" />RSS-nieuws</a>
                     </li>
                 </ul>
                     <a target="_blank" href="http://www.facebook.com/sharer/sharer.php?u=credomobiel.net"
@@ -84,64 +84,6 @@
         </div>
         <!-- /page -->
         
-
-        <!--
-        RSS-nieuws
-        -->
-
-        <div data-role="page" id="rss-nieuws">
-
-            <div data-role="header">
-                <a data-rel="back" data-icon="back">terug</a>
-                <h1>RSS-nieuws</h1>
-            </div>
-            <!-- /header -->
-
-            <div data-role="content">
-                <ul data-role="listview">
-                    <li data-theme="e">
-                        <a href="#rss-nieuws-info">
-                            <p>Tips voor het lezen van RSS-nieuws</p>
-                        </a>
-                    </li>
-                </ul>
-                <h3>Recentste berichten:</h3>
-                <script type="text/javascript" src="https://www.google.com/reader/ui/publisher-nl.js"></script>
-                <script type="text/javascript" src="https://www.google.com/reader/public/javascript/user%2F00311018366796484012%2Flabel%2FKatholiek?n=5&amp;callback=GRC_p(%7Bc%3A%22blue%22%2Ct%3A%22'Katholiek'%20via%20vicmortelmans%22%2Cs%3A%22false%22%2Cn%3A%22true%22%2Cb%3A%22false%22%7D)%3Bnew%20GRC"></script>
-            </div>
-            <!-- content -->
-
-        </div>
-        <!-- /page -->
-
-        <div data-role="page" id="rss-nieuws-info">
-
-            <div data-role="header">
-                <a data-rel="back" data-icon="back">terug</a>
-                <h2>Hoe RSS-nieuws lezen?</h2>
-            </div>
-            <!-- /header -->
-
-            <div data-role="content">
-                <p>RSS-nieuws is een dienst die meestal gekoppeld is aan een specifieke website. Met
-                    een RSS-nieuwslezer kan je je abonneren op een RSS-nieuws<i>feed</i> om zo op de
-                    hoogte te blijven van de nieuwste berichten op die website.</p>
-                <h3>gReader</h3>
-                <p><i>gReader</i> is een Android app om je abonnementen in <a
-                        href="http://www.google.com/reader">Google Reader</a> mobiel te lezen.</p>
-                <ul data-role="listview" data-inset="true">
-                    <li>
-                        <a
-                            href="https://play.google.com/store/apps/details?id=com.noinnion.android.greader.reader&amp;feature=search_result#?t=W251bGwsMSwyLDEsImNvbS5ub2lubmlvbi5hbmRyb2lkLmdyZWFkZXIucmVhZGVyIl0.">
-                            <img src="img/greader.png" />Installeer <i>gReader</i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <!-- content -->
-
-        </div>
-        <!-- /page -->
 
         <script type="text/javascript">
 
