--- a/info.html
+++ b/info.html
@@ -208,6 +208,35 @@
         </div>
         <!-- /page -->
         
+        <div data-role="page" id="rss-nieuws-info">
+
+            <div data-role="header">
+                <a data-rel="back" data-icon="back">terug</a>
+                <h2>Hoe RSS-nieuws lezen?</h2>
+            </div>
+            <!-- /header -->
+
+            <div data-role="content">
+                <p>RSS-nieuws is een dienst die meestal gekoppeld is aan een specifieke website. Met
+                    een RSS-nieuwslezer kan je je abonneren op een RSS-nieuws<i>feed</i> om zo op de
+                    hoogte te blijven van de nieuwste berichten op die website.</p>
+                <h3>gReader</h3>
+                <p><i>gReader</i> is een Android app om je abonnementen in <a
+                        href="http://www.google.com/reader">Google Reader</a> mobiel te lezen.</p>
+                <ul data-role="listview" data-inset="true">
+                    <li>
+                        <a
+                            href="https://play.google.com/store/apps/details?id=com.noinnion.android.greader.reader&amp;feature=search_result#?t=W251bGwsMSwyLDEsImNvbS5ub2lubmlvbi5hbmRyb2lkLmdyZWFkZXIucmVhZGVyIl0.">
+                            <img src="img/greader.png" />Installeer <i>gReader</i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <!-- content -->
+
+        </div>
+        <!-- /page -->
+
         
         <script type="text/javascript">
 
