--- a/rss-nieuws.html
+++ b/rss-nieuws.html
@@ -31,7 +31,7 @@
             <div data-role="content">
                 <ul data-role="listview">
                     <li data-theme="e">
-                        <a href="#rss-nieuws-info">
+                        <a href="info.html#rss-nieuws-info" rel="external">
                             <p>Tips voor het lezen van RSS-nieuws</p>
                         </a>
                     </li>
