--- a/gebeden.html
+++ b/gebeden.html
@@ -29,13 +29,13 @@
             <!-- /header -->
             
             <div data-role="content">
-                <div data-role="collapsible-set">
-                    <div data-role="collapsible" data-inset="false">
+                <div data-role="collapsible-set" data-inset="false">
+                    <div data-role="collapsible">
                         <h2>Kruisteken</h2>                        
                         <p>In de Naam van de Vader en de Zoon en de heilige Geest.</p>
                         <p>Amen</p>
                     </div>
-                    <div data-role="collapsible" data-inset="false">
+                    <div data-role="collapsible">
                         <h2>Onze Vader (Nederland)</h2>
                         <p>Onze Vader, die in de hemel zijt,<br/>
                         uw Naam worde geheiligd, <br/>
