adding prayers and PLS-files for radio

--- a/internetradio.html
+++ b/internetradio.html
@@ -37,15 +37,18 @@
                     </li>
                     <li data-icon="plus">
                         <a href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/internetradio/radio-maria-vlaanderen.m3u" rel="external">
-                            <img src="img/radiomaria.jpg" />Radio Maria Vlaanderen </a>
+                            <img src="img/radiomaria.jpg" />Radio Maria Vlaanderen <br/><small>M3U - klik rechts voor PLS</small></a>
+                        <a href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/internetradio/radio-maria-vlaanderen.pls" rel="external">PLS</a>
                     </li>
                     <li data-icon="plus">
                         <a href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/internetradio/radio-maria-nederland.m3u" rel="external">
-                            <img src="img/radiomaria.jpg" />Radio Maria Nederland </a>
+                            <img src="img/radiomaria.jpg" />Radio Maria Nederland  <br/><small>M3U - klik rechts voor PLS</small></a>
+                        <a href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/internetradio/radio-maria-nederland.pls" rel="external">PLS</a>
                     </li>
                     <li data-icon="plus">
                         <a href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/internetradio/concertzender-gregoriaans.m3u" rel="external">
-                            <img src="img/concertzender.png" />Concertzender Gregoriaans </a>
+                            <img src="img/concertzender.png" />Concertzender Gregoriaans  <br/><small>M3U - klik rechts voor PLS</small></a>
+                        <a href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/internetradio/concertzender-gregoriaans.pls" rel="external">PLS</a>
                     </li>
                 </ul>
             </div>
